--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -1,9 +1,8 @@
 .footer {
-    background-color: #333;
-    color: #fff;
-    padding: 1rem;
-}
-
-.footer h1 {
-    margin: 0;
-}
+    height: 250px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #edf3f6;
+  }
