--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -1,16 +1,34 @@
 .navbar {
-  background-color: #2c3e50;
-  color: white;
-  padding: 1rem;
-  text-align: center;
-  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-  position: sticky;
-  top: 0;
-  z-index: 1000;
+  display: flex;
+  box-shadow: rgba(0, 0, 0, 0.15) 0px -2px 10px 0px;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.5em 2em;
 }
 
-.navbar h1 {
-  margin: 0;
-  font-size: 1.8rem;
-  font-weight: bold;
+.brand {
+  font-size: 1.2em;
+}
+
+.navbar span {
+  font-weight: 900;
+  text-transform: uppercase;
+}
+
+.links_list {
+  display: flex;
+  list-style: none;
+}
+
+.links_list li {
+  margin-right: 1em;
+}
+
+.links_list li a {
+  padding: 0.4em 0.6em;
+}
+
+.active {
+  background-color: #000;
+  color: #fff;
 }
