--- a/src/index.css
+++ b/src/index.css
@@ -1,27 +1,33 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  min-height: 100vh;
+  background-color: #f6fcff;
+  padding: 0;
+  margin: 0;
+  font-family: "Montserrat", sans-serif;
 }
 
-.App {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+input::placeholder,
+textarea::placeholder {
+  font-family: "Montserrat", sans-serif;
 }
 
-.container {
-  flex: 1;
-  padding: 2rem;
-  background-color: #f8f9fa;
+input:focus,
+textarea:focus {
+  outline: none;
 }
 
+a,
+nav button {
+  text-decoration: none;
+  background-color: transparent;
+  border: none;
+  color: #000;
+  transition: 0.4s;
+  font-size: 1em;
+  cursor: pointer;
+  font-family: "Montserrat", sans-seri;
+}
+
+a:hover,
+nav button:hover {
+  color: #bbb;
+}
