--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -12,3 +12,20 @@
   justify-content: center;
   margin-bottom: 2em;
 }
+
+.search_form input {
+  margin-right: 10px;
+  width: 50%;
+}
+
+.noposts {
+  text-align: center;
+}
+
+.noposts p {
+  margin-bottom: 1.5em;
+}
+
+.noposts a {
+  padding: 10px 25px;
+}
